--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-accelerate==0.21.0
-bitsandbytes==0.41.1
-dash==2.11.1
-openelm
-pandas==2.0.3
-plotly==5.15.0
-psutil==5.9.3
-scikit-learn==1.3.0
-tensorboard==2.11.2
-tiktoken==0.4.0
-torch==1.13.1
-traitlets==5.9.0
-transformers==4.31.0
-wandb==0.13.7
+accelerate==0.27.2
+gymnasium==0.29.1
+nmmo==2.0.4
+polars
+pufferlib  # CHECK ME: requires 0.7.2 or later  TODO: fix the version
+psutil
+torch==2.1.0
+transformers==4.37.2
+wandb
