--- a/config.yaml
+++ b/config.yaml
@@ -137,3 +137,22 @@ takeru:
     early_stop_agent_num: 0
     explore_bonus_weight: 0.01
     disable_give: True
+
+hybrid:
+  env:
+    maps_path: 'maps/train_yaofeng/'
+    num_maps: 1024
+    resilient_population: 0
+  train:
+    update_epochs: 1
+  recurrent:
+    num_layers: 1
+  reward_wrapper:
+    hp_bonus_weight: 0.03
+    exp_bonus_weight: 0.002
+    defense_bonus_weight: 0.04
+    attack_bonus_weight: 0.0
+    gold_bonus_weight: 0.001
+    custom_bonus_scale: 0.1
+    disable_give: True
+    donot_attack_dangerous_npc: True
