added use custom rew flag

--- a/config.yaml
+++ b/config.yaml
@@ -98,6 +98,7 @@ recurrent:
 reward_wrapper:
   eval_mode: False
   early_stop_agent_num: 8
+  use_custom_reward: True
 
 neurips23_start_kit:
   reward_wrapper:
