--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["pip>=23.0", "setuptools>=61.0", "wheel"]
 [project]
 name = "nmmo2-baselines"
 version = "0.1.0"
-description = "Neural MMO 2.1 baselines"
+description = "Neural MMO 2023 competition baselines"
 keywords = []
 classifiers = [
 	"Natural Language :: English",
@@ -16,7 +16,7 @@ classifiers = [
 ]
 dependencies = [
     "accelerate==0.27.2",
-    "nmmo@git+https://github.com/kywch/nmmo-environment",  # WIP nmmo 2.1
+    "nmmo@git+https://github.com/NeuralMMO/environment@2.1",
     "polars==0.20.21",
     "pufferlib[nmmo]>=0.7.3",
     "psutil==5.9.8",
